computer_science/knowledge/devops/Kubernetes/rate_limit/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  namespace: development
  labels:
    app: fastapi-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-container
        image: my-fastapi-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
