computer_science/knowledge/devops/Kubernetes/rate_limit/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: development
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
