computer_science/knowledge/devops/Kubernetes/rate_limit/deployment/istio-app-deployment.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: fastapi-gateway
  namespace: development
spec:
  selector:
    istio: ingress  # Use Istio's ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fastapi-virtualservice
  namespace: development
spec:
  hosts:
  - "*"
  gateways:
  - fastapi-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: fastapi-service
        port:
          number: 8000
